# indonesian_questionanswering

./: README.md  combined.ipynb  combined_qa.csv  debug.html  debug_page.html  detik.csv  detik_berita.ipynb  detik_qa.csv  kg_qa.csv  km_qa.csv  kn_qa.csv  kompas_global.ipynb  kompas_megapolitan.ipynb  kompas_nasional.ipynb  kompas_regional.ipynb  kr_qa.csv  pyproject.toml
